tool/src/dotnet/snapshots/diplomat_tool__dotnet__tests__boolean_type@MyStruct.cs.snap
---
source: tool/src/dotnet/tests.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class MyStruct
{
    private Raw.MyStruct _inner;

    public bool A
    {
        get
        {
            unsafe
            {
                return _inner.a;
            }
        }
        set
        {
            unsafe
            {
                _inner.a = value;
            }
        }
    }

    /// <summary>
    /// Creates a managed <c>MyStruct</c> from the raw representation.
    /// </summary>
    public unsafe MyStruct(Raw.MyStruct data)
    {
        _inner = data;
    }

    public static bool Func(bool a)
    {
        unsafe
        {
            bool retVal = Raw.MyStruct.Func(a);
            return retVal;
        }
    }

    /// <summary>
    /// Returns a copy of the underlying raw representation.
    /// </summary>
    public Raw.MyStruct AsFFI()
    {
        return _inner;
    }
}
