tool/src/dotnet/snapshots/diplomat_tool__dotnet__tests__cross_module_struct_fields@Bar.cs.snap
---
source: tool/src/dotnet/tests.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class Bar
{
    private Raw.Bar _inner;

    /// <summary>
    /// Creates a managed <c>Bar</c> from the raw representation.
    /// </summary>
    public unsafe Bar(Raw.Bar data)
    {
        _inner = data;
    }

    /// <summary>
    /// Returns a copy of the underlying raw representation.
    /// </summary>
    public Raw.Bar AsFFI()
    {
        return _inner;
    }
}
