tool/src/dotnet/snapshots/diplomat_tool__dotnet__tests__cross_module_struct_fields@Foo.cs.snap
---
source: tool/src/dotnet/tests.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class Foo
{
    private Raw.Foo _inner;

    /// <summary>
    /// Creates a managed <c>Foo</c> from the raw representation.
    /// </summary>
    public unsafe Foo(Raw.Foo data)
    {
        _inner = data;
    }

    /// <summary>
    /// Returns a copy of the underlying raw representation.
    /// </summary>
    public Raw.Foo AsFFI()
    {
        return _inner;
    }
}
