tool/src/dotnet/snapshots/diplomat_tool__dotnet__tests__cross_module_struct_methods@Foo.cs.snap
---
source: tool/src/dotnet/tests.rs
expression: out_texts.get(out).unwrap()
---
// <auto-generated/> by Diplomat

#pragma warning disable 0105
using System;
using System.Runtime.InteropServices;

using Interop.Diplomat;
#pragma warning restore 0105

namespace Interop;

#nullable enable

public partial class Foo: IDisposable
{
    private unsafe Raw.Foo* _inner;

    /// <summary>
    /// Creates a managed <c>Foo</c> from a raw handle.
    /// </summary>
    /// <remarks>
    /// Safety: you should not build two managed objects using the same raw handle (may causes use-after-free and double-free).
    /// <br/>
    /// This constructor assumes the raw struct is allocated on Rust side.
    /// If implemented, the custom Drop implementation on Rust side WILL run on destruction.
    /// </remarks>
    public unsafe Foo(Raw.Foo* handle)
    {
        _inner = handle;
    }

    /// <returns>
    /// A <c>Bar</c> allocated on C# side.
    /// </returns>
    public Bar ToBar()
    {
        unsafe
        {
            if (_inner == null)
            {
                throw new ObjectDisposedException("Foo");
            }
            Raw.Bar retVal = Raw.Foo.ToBar(_inner);
            return new Bar(retVal);
        }
    }

    /// <summary>
    /// Returns the underlying raw handle.
    /// </summary>
    public unsafe Raw.Foo* AsFFI()
    {
        return _inner;
    }

    /// <summary>
    /// Destroys the underlying object immediately.
    /// </summary>
    public void Dispose()
    {
        unsafe
        {
            if (_inner == null)
            {
                return;
            }

            Raw.Foo.Destroy(_inner);
            _inner = null;

            GC.SuppressFinalize(this);
        }
    }

    ~Foo()
    {
        Dispose();
    }
}
